src/test/deca/context/valid/created/decl_var/matherror5.deca
// Description:
//  Affectation de float avec identifier float
// Resultats:
//  OK

{
int a = 42                ;
}