src/test/deca/context/invalid/created/wrongTypes/affectation/wrong_type_BOOLEAN_FLOAT.deca
// Description:
//  Assign un float to boolean
// 
// Resultats:
//    Ligne 8 : types don't match!
{
    boolean a;
    a = 6.9;
}